# PPDyn

./: .gitignore  .readthedocs.yaml  .travis.yml  .version  2D1000p.ini  3D_bin_1.ini  3D_bin_2.ini  3D_bin_3.ini  3D_bin_4.ini  3D_mean2_1.ini  3D_mean2_2.ini  3D_mean2_3.ini  3D_mean2_4.ini  3D_run_bin_1.sh  3D_run_bin_2.sh  3D_run_bin_3.sh  3D_run_bin_4.sh  3D_run_mean2_1.sh  3D_run_mean2_2.sh  3D_run_mean2_3.sh  3D_run_mean2_4.sh  CITATION.cff  CONTRIBUTING.md  README.md  arm_environment.yml  environment.yml  input.ini  makefile  pbs_script.sh  requirements.txt  run_slurm.sh  setup.cfg  setup.py  todo.txt
.github/workflows/: make.yml  python-app.yml
PPDyn/: __init__.py  dash_ppdyn.py  diagn.py  init.py  initial.py  input.ini  ppdplot.py  ppdyn.py  pusher_parallel.py  pusher_serial.py  realtime.py  thermostat.py  vtk_data.py
assets/videos/: .ppdyn_sample.mp4.icloud
data/: normalization.txt
data/vtkdata/: points_0.vtu  points_1.vtu  points_10.vtu  points_11.vtu  points_12.vtu  points_13.vtu  points_14.vtu  points_15.vtu  points_16.vtu  points_17.vtu  points_18.vtu  points_19.vtu  (+28 more)
scripts/: animate.py  digitized_field.py  dust_diagn.py  energy.py  force_distribution.py  hdf52vtk_process.py  hdf5_attr_edit.py  makeFfield.py  md_animate3d.py  movieffmpeg.sh  normalized_inputs.py  radial_dist.py  velocity_quiver.py  velocity_vtk.py
src/: config.py  constants.py  diagn.py  init.py  main.py  main_f.py  pusher_parallel.py  pusher_serial.py  realtime.py  thermostat.py  vtk_data.py
staticfields/: F_digitized.npz  Ftot.npz
tests/: input.ini  test.py  teste.py
(+11 files in other folders)
