; [metadata]
; # replace with your username:
; name = PPDyn
; version = file: .version
; author = Sayan Adhikari
; author_email = sayanadhikari207@gmail.com
; description = A python package to simulate plasma particles using Molecular Dynamics Algorithm.
; long_description = file: README.md, LICENSE, CONTRIBUTING.md
; long_description_content_type = text/markdown
; url = https://github.com/sayanadhikari/PPDyn
; project_urls =
;     Bug Tracker = https://github.com/sayanadhikari/PPDyn/issues
; classifiers =
;     Programming Language :: Python :: 3
;     License :: OSI Approved :: MIT License
;     Operating System :: OS Independent
;
; [options]
; package_dir =
;     = PPDyn
; packages = find:
; python_requires = >=3.6
;
; [options.packages.find]
; where = PPDyn
; [options.data_files]
; data = PPDyn/input.ini
[tool:pytest]
addopts = --cov PPDyn --cov-report term-missing
